--- a/web-deployment.yaml
+++ b/web-deployment.yaml
@@ -2,16 +2,15 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   annotations:
-    deployment.kubernetes.io/revision: "1"
+    deployment.kubernetes.io/revision: "4"
     kubectl.kubernetes.io/last-applied-configuration: |
-      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{"deployment.kubernetes.io/revision":"1"},"creationTimestamp":"2024-10-29T21:02:56Z","generation":3,"labels":{"app":"synergychat-web"},"name":"synergychat-web","namespace":"default","resourceVersion":"3068","uid":"3a2c3ae3-5daa-4a59-b8de-e20931d47c80"},"spec":{"progressDeadlineSeconds":600,"replicas":3,"revisionHistoryLimit":10,"selector":{"matchLabels":{"app":"synergychat-web"}},"strategy":{"rollingUpdate":{"maxSurge":"25%","maxUnavailable":"25%"},"type":"RollingUpdate"},"template":{"metadata":{"creationTimestamp":null,"labels":{"app":"synergychat-web"}},"spec":{"containers":[{"image":"bootdotdev/synergychat-web:latest","imagePullPolicy":"Always","name":"synergychat-web","resources":{},"terminationMessagePath":"/dev/termination-log","terminationMessagePolicy":"File"}],"dnsPolicy":"ClusterFirst","restartPolicy":"Always","schedulerName":"default-scheduler","securityContext":{},"terminationGracePeriodSeconds":30}}},"status":{"availableReplicas":10,"conditions":[{"lastTransitionTime":"2024-10-29T21:02:56Z","lastUpdateTime":"2024-10-29T21:03:38Z","message":"ReplicaSet \"synergychat-web-fbdb8d849\" has successfully progressed.","reason":"NewReplicaSetAvailable","status":"True","type":"Progressing"},{"lastTransitionTime":"2024-11-01T17:10:20Z","lastUpdateTime":"2024-11-01T17:10:20Z","message":"Deployment has minimum availability.","reason":"MinimumReplicasAvailable","status":"True","type":"Available"}],"observedGeneration":3,"readyReplicas":10,"replicas":10,"updatedReplicas":10}}
+      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{"deployment.kubernetes.io/revision":"2"},"creationTimestamp":"2024-10-29T21:02:56Z","generation":7,"labels":{"app":"synergychat-web"},"name":"synergychat-web","namespace":"default","uid":"3a2c3ae3-5daa-4a59-b8de-e20931d47c80"},"spec":{"progressDeadlineSeconds":600,"replicas":3,"revisionHistoryLimit":10,"selector":{"matchLabels":{"app":"synergychat-web"}},"strategy":{"rollingUpdate":{"maxSurge":"25%","maxUnavailable":"25%"},"type":"RollingUpdate"},"template":{"metadata":{"creationTimestamp":null,"labels":{"app":"synergychat-web"}},"spec":{"containers":[{"envFrom":[{"configMapRef":{"name":"synergychat-web-configmap"}}],"image":"bootdotdev/synergychat-web:latest","imagePullPolicy":"Always","name":"synergychat-web","resources":{},"terminationMessagePath":"/dev/termination-log","terminationMessagePolicy":"File"}],"dnsPolicy":"ClusterFirst","restartPolicy":"Always","schedulerName":"default-scheduler","securityContext":{},"terminationGracePeriodSeconds":30}}},"status":{"availableReplicas":3,"conditions":[{"lastTransitionTime":"2024-11-01T17:10:20Z","lastUpdateTime":"2024-11-01T17:10:20Z","message":"Deployment has minimum availability.","reason":"MinimumReplicasAvailable","status":"True","type":"Available"},{"lastTransitionTime":"2024-10-29T21:02:56Z","lastUpdateTime":"2024-11-01T19:39:03Z","message":"ReplicaSet \"synergychat-web-bd97b878f\" has successfully progressed.","reason":"NewReplicaSetAvailable","status":"True","type":"Progressing"}],"observedGeneration":7,"readyReplicas":3,"replicas":3,"updatedReplicas":3}}
   creationTimestamp: "2024-10-29T21:02:56Z"
-  generation: 4
+  generation: 9
   labels:
     app: synergychat-web
   name: synergychat-web
   namespace: default
-  resourceVersion: "3475"
   uid: 3a2c3ae3-5daa-4a59-b8de-e20931d47c80
 spec:
   progressDeadlineSeconds: 600
@@ -32,12 +31,15 @@ spec:
         app: synergychat-web
     spec:
       containers:
-      - image: bootdotdev/synergychat-web:latest
-        imagePullPolicy: Always
-        name: synergychat-web
-        resources: {}
-        terminationMessagePath: /dev/termination-log
-        terminationMessagePolicy: File
+        - envFrom:
+            - configMapRef:
+                name: synergychat-web-configmap
+          image: bootdotdev/synergychat-web:latest
+          imagePullPolicy: Always
+          name: synergychat-web
+          resources: {}
+          terminationMessagePath: /dev/termination-log
+          terminationMessagePolicy: File
       dnsPolicy: ClusterFirst
       restartPolicy: Always
       schedulerName: default-scheduler
@@ -46,19 +48,19 @@ spec:
 status:
   availableReplicas: 3
   conditions:
-  - lastTransitionTime: "2024-10-29T21:02:56Z"
-    lastUpdateTime: "2024-10-29T21:03:38Z"
-    message: ReplicaSet "synergychat-web-fbdb8d849" has successfully progressed.
-    reason: NewReplicaSetAvailable
-    status: "True"
-    type: Progressing
-  - lastTransitionTime: "2024-11-01T17:10:20Z"
-    lastUpdateTime: "2024-11-01T17:10:20Z"
-    message: Deployment has minimum availability.
-    reason: MinimumReplicasAvailable
-    status: "True"
-    type: Available
-  observedGeneration: 4
+    - lastTransitionTime: "2024-11-01T17:10:20Z"
+      lastUpdateTime: "2024-11-01T17:10:20Z"
+      message: Deployment has minimum availability.
+      reason: MinimumReplicasAvailable
+      status: "True"
+      type: Available
+    - lastTransitionTime: "2024-10-29T21:02:56Z"
+      lastUpdateTime: "2024-11-01T19:47:18Z"
+      message: ReplicaSet "synergychat-web-bd97b878f" has successfully progressed.
+      reason: NewReplicaSetAvailable
+      status: "True"
+      type: Progressing
+  observedGeneration: 9
   readyReplicas: 3
   replicas: 3
   updatedReplicas: 3
