--- a/crawler-deployment.yaml
+++ b/crawler-deployment.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: synergychat-crawler
+  namespace: crawler
 spec:
   replicas: 1
   selector:
